nowrap fix

--- a/src/components/Layouts/style.scss
+++ b/src/components/Layouts/style.scss
@@ -137,7 +137,7 @@ be set to display none.
 @media not all and (min-resolution:.001dpcm) { 
     @media screen {
         body, p, h1, h2, h3, h4, h5 { 
-            white-space: nowrap;
+            
         }
     }
 }
